fix spacing

--- a/css/custom.css
+++ b/css/custom.css
@@ -4,9 +4,9 @@
 }
 
 #home {
-  /* display: flex;
+  display: flex;
   justify-content: center;
-  align-items: center; */
+  align-items: center;
   background-image: url('../img/map.jpg');
   background-size: cover;
   background-position: center 50%;
@@ -16,4 +16,5 @@
   h1 {
     font-size: 3rem !important;
   }
+  
 }
